tests/fixtures/invalid/round_dict_int.py
# Cannot call round() with Dict[str, int], Int
x = round({"a": 1}, 1)
